// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCarousel stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[100vh] md:h-[85vh] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden h-full"
        data-slot="carousel-content"
      >
        <div
          class="flex h-full -ml-4"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Discover amazing products
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Latest fashion trends
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Limited time deals
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-20 flex space-x-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 w-8 h-2 bg-foreground"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutAutoPlay story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[100vh] md:h-[85vh] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden h-full"
        data-slot="carousel-content"
      >
        <div
          class="flex h-full -ml-4"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Discover amazing products
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Latest fashion trends
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Limited time deals
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-20 flex space-x-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 w-8 h-2 bg-foreground"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutDots story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[100vh] md:h-[85vh] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden h-full"
        data-slot="carousel-content"
      >
        <div
          class="flex h-full -ml-4"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Discover amazing products
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Latest fashion trends
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Limited time deals
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="absolute bottom-6 right-6 z-30 flex gap-2"
    >
      <button
        aria-label="Previous slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Next slide (1 of 3)"
        class="p-3 bg-foreground/10 hover:bg-foreground/20 backdrop-blur-sm transition-all focus:outline-none focus:ring-2 focus:ring-foreground/50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-6 h-6 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > WithoutNavigation story renders and matches snapshot 1`] = `
<div>
  <div
    aria-label="Hero carousel with 3 slides"
    class="relative w-full h-[100vh] md:h-[85vh] overflow-hidden"
    role="region"
    tabindex="0"
  >
    <div
      aria-roledescription="carousel"
      class="relative w-full h-full"
      data-slot="carousel"
      role="region"
    >
      <div
        class="overflow-hidden h-full"
        data-slot="carousel-content"
      >
        <div
          class="flex h-full -ml-4"
          style="transform: translate3d(0px,0px,0px);"
        >
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 1"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Welcome to Our Store
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Discover amazing products
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/all"
                      >
                        Shop Now
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 2"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      New Collection
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Latest fashion trends
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/new"
                      >
                        Explore
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-roledescription="slide"
            class="min-w-0 shrink-0 grow-0 basis-full h-full pl-4"
            data-slot="carousel-item"
            role="group"
          >
            <div
              class="relative w-full h-full overflow-hidden"
            >
              <img
                alt="Slide 3"
                class="absolute inset-0 w-full h-full object-cover"
                fetchpriority="high"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
              <div
                class="absolute inset-0 z-10 flex items-center justify-center"
              >
                <div
                  class="container mx-auto px-4 sm:px-6 lg:px-8"
                >
                  <div
                    class="max-w-2xl mx-auto text-center"
                    data-theme="light"
                  >
                    <h1
                      class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-foreground mb-3 sm:mb-4 md:mb-6 leading-none tracking-tight"
                    >
                      Special Offers
                    </h1>
                    <p
                      class="text-sm sm:text-base md:text-lg lg:text-xl font-normal text-muted-foreground mb-4 sm:mb-6 md:mb-8 leading-none tracking-wide"
                    >
                      Limited time deals
                    </p>
                    <div
                      class="flex justify-center"
                    >
                      <a
                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm sm:text-base md:text-lg lg:text-xl p-3 sm:p-4 md:p-5 lg:p-6"
                        data-size="default"
                        data-slot="button"
                        data-variant="default"
                        href="/category/sale"
                      >
                        Shop Deals
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Slide navigation"
      class="absolute bottom-6 left-1/2 -translate-x-1/2 z-20 flex space-x-2"
      role="tablist"
    >
      <button
        aria-label="Go to slide 1 of 3"
        aria-selected="true"
        class="transition-all duration-300 w-8 h-2 bg-foreground"
        role="tab"
        tabindex="0"
      />
      <button
        aria-label="Go to slide 2 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
      <button
        aria-label="Go to slide 3 of 3"
        aria-selected="false"
        class="transition-all duration-300 w-2 h-2 bg-foreground/50 hover:bg-foreground/75"
        role="tab"
        tabindex="-1"
      />
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Slide 
      1
       of 
      3
      : 
      Welcome to Our Store
    </div>
  </div>
</div>
`;
